--- a/style.css
+++ b/style.css
@@ -28,6 +28,20 @@ ul.sidenav li a:hover:not(.active) {
     color: #101727;
 }
 
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+ float: left;
+ margin-left: 25%;
+ width: 50%;
+ padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+ content: "";
+ clear: both;
+ display: table;
+}
 div.content {
     margin-left: 25%;
     padding: 10px 16px;
