--- a/style.css
+++ b/style.css
@@ -74,7 +74,23 @@ div.header-2 {
     color: #CCCFD3;
 }
 
-
+.video-container {
+    margin-left: 25%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 0px;
+    height: 0;
+    overflow: hidden;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .clearfix {
     *zoom:1 /* for IE */
 }
@@ -123,6 +139,7 @@ footer {
          color: #CCCFD3;
 }
 .video-container {
+   margin-left: 0;
     position: relative;
     padding-bottom: 56.25%;
     padding-top: 0px;
