--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-body {margin: 0; background-color: #142740 ; font-family: Merriweather, serif; color:#CCCFD3; }
+body {margin: 0; background-color: #142740 ; font-family: Merriweather, serif; color:#f2d785; }
 
 /* new bit */
 
 a:link, a:visited {
-  background-color: #f2ff49;
-  color: #101727;
-  border: 2px solid #cccfd3;
+  background-color: #f2d785;
+  color: #142740;
+  border: 2px solid #1D4859;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -13,8 +13,8 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
-  background-color: #00bfb2;
-  color: #101727;
+  background-color: #142740;
+  color: #F2D785;
 }
 
 /* new bit */
@@ -23,7 +23,7 @@ ul.sidenav {
     margin: 10;
     padding: 0;
     width: 25%;
-    background-color: #101727;
+    background-color: #142740;
     position: fixed;
     height: 90%;
     overflow: auto;
@@ -38,12 +38,12 @@ ul.sidenav li a {
 
 ul.sidenav li a.active {
     background-color: #3eff8b;
-    color: #101727;
+    color: #142740;
 }
 
 ul.sidenav li a:hover:not(.active) {
     background-color: #00bfb2;
-    color: #101727;
+    color: #142740;
 }
 .column {
  float: left;
