--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul.sidenav {
 
 ul.sidenav li a {
     display: block;
-    color: #84B8D9;
+    color: #090126;
     padding: 8px 16px;
     text-decoration: none;
 }
