--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ div.header-2 {
     margin-left: 25%;
     padding: 10px 16px;
     align-content: bottom;
-    font-family: 'Kaushan Script', Cursive;
+    font-family: "Playfair Display",'Kaushan Script', Cursive;
     font-size: 68px;
 
     font-weight: bold;
@@ -150,7 +150,7 @@ footer {
     div.header-2 {
          margin-left: 0;
          padding: 10px 16px;
-         font-family: 'Kaushan Script', cursive;
+         font-family: "Playfair Display",'Kaushan Script', cursive;
          font-size: 48px;
          font-style: italic;
          font-weight: bold;
@@ -198,7 +198,7 @@ footer {
     div.header-2 {
          margin-left: 0%;
          padding: 5px 8px;
-         font-family: 'Kaushan Script', cursive;
+         font-family: "Playfair Display",'Kaushan Script', cursive;
          font-size: 18px;
          font-style: italic;
          font-weight: bold;
