--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-body {margin: 0; background-color: #090126 ; font-family: Merriweather, serif; color:#84B8D9; }
+body {margin: 0; background-color: #090126 ; font-family: "Proza Libre", Merriweather, serif; color:#84B8D9; }
 
 /* new bit */
 
